--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Short stories, French'
 - !lcsh 'Fiction'
 - !lcc 'PQ'
+- GITenberg
 tableOfContents: Au lecteur -- Une maison isolée -- Les trois compagnons -- Les parents
   -- La tutelle -- Seize ans après -- La Forge des Buttes -- Trois amis du grand monde
   -- La villa de madame de Luxeuil -- Le vieux portrait -- L’agneau blanc -- Esquisses
